fix double scroll

--- a/src/index.css
+++ b/src/index.css
@@ -30,16 +30,19 @@
   }
 }
 
-html,
-body,
-#root {
+html, body {
   margin: 0;
+  padding: 0;
   height: 100%;
-  min-height: 100%;
-  width: 100%;
+  overflow: hidden;
 }
 
 body {
   @apply font-display bg-background-dark text-slate-100;
+}
+
+#root {
+  height: 100%;
   overflow-x: hidden;
+  overflow-y: auto;
 }
